--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1777,12 +1777,14 @@ background: url(../images/bgFooter.png) no-repeat;
     margin:auto;
     align-items: center;
     
+    
 }
 .fr {
     margin-top: 40px;
     text-align: center;
     margin: auto;
     align-items: center;
+    margin-bottom: 40px;
 }
 .footer a:hover {
     background:#2f2f2f;
